# store-keeper

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  shopify.app.storekeeper-agent.toml
docs/: PROGRESS.md  TROUBLESHOOTING.md  VISION.md  langsmith.md  tech_spec.md  testing.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  ticketPresentation.ts  types.ts
frontend/src/components/: ApprovalCard.tsx  StatusBadge.tsx  TicketDetail.tsx  TicketForm.tsx  TicketList.tsx
policies/: address-changes.md  cancellations.md  returns-and-refunds.md  shipping.md  warranty.md
scripts/: check_order_policy.py  classify_ticket.py  index_policies.py  run_ticket.py  search_policy.py  seed_store.py  smoke_shopify.py
src/storekeeper/: classify.py  config.py  domain.py  policy_docs.py  tickets.py
src/storekeeper/api/: __init__.py  app.py  schemas.py
src/storekeeper/graph/: build.py  nodes.py  state.py  task_plan.py
src/storekeeper/policy/: __init__.py  gate.py
src/storekeeper/shopify/: client.py  operations.py  writes.py
tests/: test_api.py  test_classify.py  test_graph.py  test_policy_docs.py  test_policy_gate.py  test_shopify_operations.py  test_shopify_writes.py  test_tickets.py
