[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "storekeeper"
version = "0.1.0"
description = "AI customer-support agent for Shopify stores with structurally enforced policy gates"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "langchain>=1.3.13",
    "langchain-openrouter>=0.2.6",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "chromadb>=1.5.9",
]

[tool.setuptools.packages.find]
where = ["src"]
